src/objects/LodeStar_Errors__c.object
<CustomObject>
    <description>Object supports webservice failures by account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Related Account the Error is from.</description>
        <inlineHelpText>The related Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LodeStar Errors</relationshipLabel>
        <relationshipName>LodeStar_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>CustomerName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMsg__c</fullName>
        <label>ErrorMsg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionTime__c</fullName>
        <label>ExceptionTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShortCode__c</fullName>
        <label>ShortCode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>LodeStar Errors</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ShortCode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LodeStar Errors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LodeStar Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>